# MinsFrameBack

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  env.example.yaml  my-app.csproj  my-app.http  package.json  pnpm-lock.yaml  vcpkg.json
Properties/: launchSettings.json
scripts/: code.sh  run.sh
